--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ h1, h2 {
     text-transform: uppercase;
     font-weight: 600;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+    margin-bottom: 10px;
 }
 
 @keyframes pulse {
@@ -263,10 +264,6 @@ header {
     margin-top:50px;
 }
 
-h1, h2 {
-    margin-bottom: 1rem;
-}
-
 a.cta-btn {
     display: inline-block;
     margin-top: 1rem;
@@ -497,16 +494,26 @@ footer {
     right: 2rem; 
 }
 
+@keyframes pulsate {
+    0%, 100% {
+        transform: scale(1); 
+    }
+    50% {
+        transform: scale(1.2); 
+    }
+}
+
 .footer-socials a img {
     width: 24px;
     height: 24px;
     filter: invert(100%); 
-    transition: transform 0.3s ease, opacity 0.3s ease;
+    animation: pulsate 2s infinite; 
+    transition: transform 0.3s ease;
 }
 
 .footer-socials a:hover img {
-    transform: scale(1.2);
-    opacity: 0.8
+    transform: scale(1.3); 
+    animation: none; 
 }
 
 ::-webkit-scrollbar {
