--- a/main.css
+++ b/main.css
@@ -571,14 +571,23 @@ footer {
     animation: none; 
 }
 
-#notification {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    margin-top: 20px;
+.notification {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #28a745; 
+    color: #fff;
+    padding: 1rem;
     border-radius: 5px;
-    text-align: center;
-    display: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: opacity 0.5s ease, visibility 0.5s;
+    z-index: 1000;
+}
+
+.notification.hidden {
+    opacity: 0;
+    visibility: hidden;
 }
 
 #message-list {
@@ -593,8 +602,6 @@ footer {
     margin: 5px 0;
     border-radius: 5px;
 }
-
-
 
 ::-webkit-scrollbar {
     width: 12px; 
