--- a/main.css
+++ b/main.css
@@ -540,6 +540,27 @@ footer {
     position: relative;
 }
 
+.color-button {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #00bcd4;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    text-decoration: none;
+}
+
+footer p {
+    flex-grow: 1; 
+    text-align: center; 
+    margin: 0; 
+}
+
 .footer-socials {
     margin-top:10px;
     display: flex;
